@@ -21,6 +21,7 @@ Verilator 5.027 devel
 * Support conditional constraints (#5245). [Arkadiusz Kozdra, Antmicro Ltd.]
 * Add `--compiler-include` for additional C++ includes (#5139) (#5202). [Bartłomiej Chmiel, Antmicro Ltd.]
 * Add `--emit-accessors` (#5182) (#5227). [Ryan Ziegler]
+* Add suggestions on misspelled PLI functions.
 * Fix fusing macro arguments to not ignore whitespace (#5061). [Tudor Timi]
 * Fix classes/modules of case-similar names (#5109). [Arkadiusz Kozdra]
 * Fix mis-removing $value$plusargs calls (#5127) (#5137). [Seth Pellegrino]
